--- a/style.css
+++ b/style.css
@@ -555,7 +555,7 @@ border-radius: 0.5rem;
         box-shadow: var(--box-shadow);
         width: 30rem;
         border: var(--border);
-        background: #fff;
+        background: #black;
         transform: scale(0);
         opacity: 0;
         transform-origin: top right;
