--- a/style.css
+++ b/style.css
@@ -555,7 +555,7 @@ border-radius: 0.5rem;
         box-shadow: var(--box-shadow);
         width: 30rem;
         border: var(--border);
-        background: #black;
+        background: #fff;
         transform: scale(0);
         opacity: 0;
         transform-origin: top right;
@@ -573,6 +573,8 @@ border-radius: 0.5rem;
         font-size: 2rem;
         display: block;
         margin:2.5rem;
+                color:green;
+
     }
 
 }
